--- a/15_LLMs/hello_world/.env
+++ b/15_LLMs/hello_world/.env
@@ -1,1 +1,1 @@
-OPENAI_API_KEY=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
+OPENAI_API_KEY=
